# tgd

./: CMakeLists.txt  Doxyfile.in  FindCFITSIO.cmake  FindEXIF.cmake  FindEXIV2.cmake  FindFFMPEG.cmake  FindMUPARSER.cmake  FindNetPBM.cmake  FindOpenEXR.cmake  FindPANDOC.cmake  FindPFS.cmake  FindPOPPLER.cmake  LICENSE  README.md  TODO  array.hpp  cmdline.cpp  cmdline.hpp  dl.hpp  io-csv.cpp  io-dcmtk.cpp  io-exiv2.hpp  io-exr.cpp  io-exr.hpp  io-ffmpeg.cpp  io-ffmpeg.hpp  io-fits.cpp  io-fits.hpp  io-gdal.cpp  io-gdal.hpp  io-gta.cpp  io-gta.hpp  io-hdf5.cpp  io-hdf5.hpp  io-jpeg.cpp  io-jpeg.hpp  io-mat.cpp  io-mat.hpp  io-pdf.cpp  io-pdf.hpp  (+23 more)
core/: alloc.hpp  array.hpp  foreach.hpp  io.hpp  operators.hpp  taglist.hpp
doc/: tad-manual.txt  tgd-manual.txt
io/: dl.hpp  io-csv.cpp  io-csv.hpp  io-dcmtk.cpp  io-dcmtk.hpp  io-exiv2.hpp  io-exr.cpp  io-exr.hpp  io-ffmpeg.cpp  io-ffmpeg.hpp  io-fits.cpp  io-fits.hpp  io-gdal.cpp  io-gdal.hpp  io-gta.cpp  io-gta.hpp  io-hdf5.cpp  io-hdf5.hpp  io-jpeg.cpp  io-jpeg.hpp  io-magick.cpp  io-magick.hpp  io-mat.cpp  io-mat.hpp  io-pdf.cpp  io-pdf.hpp  io-pfs.cpp  io-pfs.hpp  io-png.cpp  io-png.hpp  io-pnm.cpp  io-pnm.hpp  io-raw.cpp  io-raw.hpp  io-rgbe.cpp  io-rgbe.hpp  io-stb.cpp  io-stb.hpp  io-tad.cpp  io-tgd.cpp  (+7 more)
tests/: tad-tool.sh  test-basic.cpp  tgd-tool.sh
util/: cmdline.cpp  cmdline.hpp  tad.cpp  tgd.cpp
